All_Component_DX/force-app/main/default/objects/Sub_Location__c/Sub_Location__c.object-meta.xml
<CustomObject>
    <description>Sub location is a unique information that identifies an address in a given location. Sub location information is beneficial in service scenarios when accurate information about the physical sub location of a product is crucial to the timely delivery of service. A sub location should always be used in the context of a location.</description>
    <label>Sub Location</label>
    <nameField>
        <label>Sub Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>