All_Component_DX/force-app/main/default/objects/Sub_Location__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to which this sub location belongs to. Note that you can maintain your own organization’s sub locations in which case you will create an Account record for your account.</description>
    <inlineHelpText>The company to which this sub location belongs to. Note that you can maintain your own organization’s sub locations in which case you will create an Account record for your company</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>