All_Component_DX/force-app/main/default/objects/Sub_Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>“City” part of the sub location address</description>
    <inlineHelpText>“City” part of the sub location address</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>