All_Component_DX/force-app/main/default/objects/Sub_Location__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Main fax number for the sub location if available</description>
    <inlineHelpText>Main fax number for the sub location if available</inlineHelpText>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>