All_Component_DX/force-app/main/default/objects/Sub_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Sub Locations</relationshipLabel>
    <relationshipName>Sub_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>