All_Component_DX/force-app/main/default/objects/Sub_Location__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the parent sub location</description>
    <label>Parent</label>
    <referenceTo>Sub_Location__c</referenceTo>
    <relationshipLabel>Sub Locations</relationshipLabel>
    <relationshipName>Sub_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>