All_Component_DX/force-app/main/default/objects/Sub_Location__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Main phone number for the sub location if available</description>
    <inlineHelpText>Main phone number for the sub location if available</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>