All_Component_DX/force-app/main/default/objects/Sub_Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>“Street” part of the sub location’s address</description>
    <inlineHelpText>“Street” part of the sub location’s address</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>